--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -4,3 +4,11 @@ body {
     padding: 0;
     height: 100%;
 }
+
+body {
+    /*box-sizing: border-box;
+    min-width: 200px;
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 45px;*/
+}
