细节样式调整

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5,3 +5,8 @@ body {
     height: 100%;
     font-family: "PingFang SC", "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei", 微软雅黑, STHeiti, 华文细黑, sans-serif;
 }
+
+#nprogress .bar {
+    background: #F76B1C;
+    height: 3px;
+}
