--- a/src/components/header.html
+++ b/src/components/header.html
@@ -8,7 +8,7 @@
 <script>
   module.exports = {
     data: {
-      title: 'Cheft\'s 的博客',
+      title: 'Cheft 的博客',
       subtitle: '不会剽窃的程序员不是好师傅'
     },
     listen: {
